2006-06-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Thread.java:
	(getAllStackTraces()): Implemented.
	(getStackTrace()): Likewise.
	
2006-06-27  Tania Bento  <tbento@redhat.com>

	* java/awt/Component.java
	(setComponentOrientation): NPE should not be thrown.

2006-06-27  Tom Tromey  <tromey@redhat.com>

	* configure.ac: Create gjar, gnative2ascii, gserialver.
	* tools/gappletviewer.in: Quote $@.
	* tools/gkeytool.in: Likewise.
	* tools/gjarsigner.in: Likewise.
	* tools/gjar.in: New file.
	* tools/gnative2ascii.in: Likewise.
	* tools/gserialver.in: Likewise.
	* tools/Makefile.am (bin_PROGRAMS): Added gjar, gnative2ascii,
	gserialver.
	(bin_SCRIPTS): Likewise.

2006-06-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/management/ThreadMXBean.java:
	(getThreadInfo(long[])): Corrected return type.
	(getThreadInfo(long[], int)): Likewise.
	
>>>>>>> 1.7954
2006-06-27  Mark Wielaard  <mark@klomp.org>

	* java/awt/datatransfer/Clipboard.java (addFlavorListener): Do
	nothing when listener is null.
	(removeFlavorListener): Likewise.

	* java/awt/datatransfer/DataFlavor.java
	(getRepresentationClassFromMime): Renamed to
	getRepresentationClassFromMimeThrows.
	(isRepresentationClassInputStream): Use Class.isAssignableFrom().
	(isRepresentationClassSerializable): Likewise.
	(isFlavorJavaFileListType): Likewise and check primary and
	subtype.
	(getParameter): Parameters are separated by semi-colons.
	(DataFlavor(Class,String,String)): Do some sanity checks.
	(DataFlavor(String,String,ClassLoader)): Call
	getRepresentationClassFromMimeThrows.
	(DataFlavor(String)): Likewise.
	(equals(DataFlavor)): Special case primary type text and charset
	parameter.
	
2006-06-27  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/Component.java
	(setName): Fire required PropertyChangeEvent,
	* java/awt/Label.java
	(getText): Removed redundant brackets,
	(generateName): New method (override),
	(nextLabelNumber): New field,