@@ -1,3 +1,9 @@
+2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/table/DefaultTableColumnModel.java
+	(changeEvent): Don't initialize yet, removed FIXME,
+	(fireColumnModelChanged): Initialize changeEvent if necessary.
+
 2006-06-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/lang/Thread.java:
